Handling of rdfs:label and rdfs:comment on the ontology